package com.javadabadu.disney.models.entity;

public enum TipoPersonaje {
    ANIMADO,
    REAL
}
